# lvgl_simulator

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  lv_conf.h  lv_drv_conf.h  main.c  test_network.c
custom/: custom.c  custom.h  custom.mk  data_manager.c  data_manager.h  lv_conf_ext.h  network.c  network.h  page_manager.c  page_manager.h
custom/custom_fonts/: custom_fonts.mk  fonts_list.mk
custom/custom_images/: custom_images.mk  ic_play.c  images_list.mk
id3v2lib-dev/: CMakeLists.txt
include/: log.h  lvglui.h  mpd_client.h  network.h
lv_drivers/display/: display.mk
lv_drivers/indev/: encoder.c  encoder.h  indev.mk
mpd_client/: mpd_client.c
src/: lvglui.c
src/utils/: display_driver.c  display_driver.h  log.c  mpd_client.c  network.c
