# ==============================================================================
# ID3v2Lib CMake配置文件
# ==============================================================================

cmake_minimum_required(VERSION 3.10)

# ==============================================================================
# 源文件收集
# ==============================================================================

# 1. 收集源文件
file(GLOB ID3V2LIB_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/modules/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/modules/frames/*.c")

# 2. 收集头文件目录
set(ID3V2LIB_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

# ==============================================================================
# 库创建
# ==============================================================================

# 3. 创建静态库
add_library(id3v2lib STATIC ${ID3V2LIB_SRCS})

# ==============================================================================
# 包含目录设置
# ==============================================================================

# 4. 添加包含目录
target_include_directories(id3v2lib PUBLIC ${ID3V2LIB_INCLUDE_DIRS})

# ==============================================================================
# 编译选项
# ==============================================================================

# 5. 设置C标准
target_compile_features(id3v2lib PRIVATE c_std_99)

# 6. 添加编译定义
# 这里可以添加id3v2lib所需的编译定义

# ==============================================================================
# 链接配置
# ==============================================================================

# 7. 链接所需库
# id3v2lib是一个纯C库，不需要外部依赖

# ==============================================================================
# 安装配置（可选）
# ==============================================================================

# 8. 设置安装目录
# install(TARGETS id3v2lib DESTINATION lib)
# install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include)
